# icao-airports-map

./: .gitignore  .gitmodules  README.md  dl-country-borders.sh  filter-icao.py  index.html  package.json  pnpm-lock.yaml  tmux.sh  tsconfig.json  vite.config.js
.github/workflows/: deploy.yml
points_in_poly/: Cargo.toml
points_in_poly/src/: main.rs
src/: airport.ts  borders.ts  colors.ts  config.ts  countries.ts  geojson.ts  info.ts  main.ts  style.css  utils.ts
