[package]
name = "points_in_poly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
csv = "1"
geo = "0.28.0"
geojson = "0.24.1"
regex = "1.10.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"
